css/main.css
/* moonshiner fonts */
@font-face {
    font-family: 'moonshinerround';
    src: url('../fonts/moonshiner-round-webfont.eot');
    src: url('../fonts/moonshiner-round-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/moonshiner-round-webfont.woff2') format('woff2'),
         url('../fonts/moonshiner-round-webfont.woff') format('woff'),
         url('../fonts/moonshiner-round-webfont.ttf') format('truetype'),
         url('../fonts/moonshiner-round-webfont.svg#moonshinerround') format('svg');
    font-weight: normal;
    font-style: normal;
}


/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */

html,
button,
input,
select,
textarea {
    color: #222;
}

body {
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight: h5bp.com/i
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between images and the bottom of their containers: h5bp.com/i/440
 */

img {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Chrome Frame prompt
   ========================================================================== */

.chromeframe {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Parallax Scroll
   ========================================================================== */
body,
html {
	height: 100%;
	min-height: 100%;
	background-color: #000000;
}
body {
	
}
.no-js {
	padding-top: 106px;
}
h2 {
	margin-top: 0;
  font-family: 'moonshinerround';
}
.loading {
	background: url('../img/ico_loading.gif') no-repeat center center;
}
.title-slide,
.slide {
  width: 100%;
  height: 100%;
}
section {
	min-width: 960px;
	opacity: 0;
  height:100vh;
}
.loaded section,
.no-js section {
	opacity: 1;
	-webkit-transition: opacity 300ms ease-out;
	-moz-transition: opacity 300ms ease-out;
	transition: opacity 300ms ease-out;
}
#preload {
	width: 1px;
	height: 1px;
	overflow: hidden;
	position: absolute;
	top: 0;
	left: 0;
}
#trigger {
  heigth: 1px;
  position: fixed;
  top: 50%;
  left: 0;
}
.bcg {
	background-position: center center;
	background-repeat: no-repeat;
	background-attachment: fixed;
	background-size: cover;
	height: 100%;
	width: 100%;
}

.hsContainer {
	width: 100%;
	height: 100%;
	overflow: hidden;
	position: relative;
}

.hsContent {
	max-width: 500px;
	position: absolute;
	left: 50%;
	top: 50%;
}
	.hsContent h2  {
		color: #ffffff;
        text-transform: uppercase;
        padding: 0px 5px;
        font-size: 47px;
        line-height: 44px;
        margin-bottom: 12px;
	}
	.hsContent p {
		width: 400px;
		color: #b2b2b2;
	}
	.hsContent a {
		color: #b2b2b2;
		text-decoration: underline;
	}

.hideme{
  display: none;
}
.fade {
  opacity: 0;
}

h2 {
  opacity: 1;
  -webkit-transition: opacity 300ms ease-in-out;
  -moz-transition: opacity 300ms ease-in-out;
  -ms-transition: opacity 300ms ease-in-out;
  -o-transition: opacity 300ms ease-in-out;
  transition: opacity 300ms ease-in-out;
}
h2.out {
  opacity: 0 !important;
  -webkit-transition: opacity 1s ease-in-out;
  -moz-transition: opacity 1s ease-in-out;
  -ms-transition: opacity 1s ease-in-out;
  -o-transition: opacity 1s ease-in-out;
  transition: opacity 1s ease-in-out;
}

/* Slide 0 */
/*#slide-0 .bcg {background-image:url('../img/bcg_slide-0.jpg')}*/
/*#slide-0 .bcg {background-image:url('../img/bcg_slide-0.jpg')}*/
#slide-0 .hsContent {
    bottom: 200px;
    top: auto;
}
/* Slide 1 */
#slide-1 .bcg {background-image:url('../img/bcg_slide-1.jpg')}
#slide-1 .hsContent {
	bottom: 30px;
	top: auto;
    left:10%;
}
    #slide-1 img.bottle {
    vertical-align: middle;
    position: absolute;
    right: 100px;
    bottom: 20px;
    width: 300px;
    }
    #slide-1 h2{
      font-size:100px;
      line-height: 1;
    }
    #slide-1 h2.out {
    }
    #slide-1 img.thisIs {
      width: 120%;
      opacity: 0;
      position: relative;
    }

/* Slide 2 */
#slide-2 .bcg {background-image:url('../img/bcg_slide-2.jpg')}
  #slide-2 .layer,
  #slide-2 .anchor {
    width: 100%;
    height: 100%;
  }
  #slide-2 .layer {
    position: absolute;
  }
  #slide-2 .anchor {
    position: relative;
  }
  #slide-2 .always-text {
    transform: translate3d(0px, 0px, 0px);
  }
  #slide-2 .always-bottle {
    transform: translate3d(0px, 100%, 0px);
  }
  #slide-2 img {
    width: 75%;
    max-width: 930px;
  }
  #slide-2 #always,
  #slide-2 #alwaysBottle {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
  #slide-2 #alwaysBottle {
    width: 16%;
    max-width: 190px;
    left: 58%;
  }

/* Slide 3 */
#slide-3 .bcg {background-image:url('../img/bcg_slide-3.jpg')}
#slide-3 .hsContent {
  max-width: 450px;
  transform: translateX(-50%);
  top: 10%;
}
	#slide-3 img {
		width:100%;
    opacity: 0;
	}


/* Slide 4 */
#slide-4 .bcg {background-image:url('../img/bcg_slide-4.jpg')}
#slide-4 .hsContent {
  max-width: 450px;
  transform: translateX(-50%);
  top: 10%;
}
	#slide-4 h2 {
		background: none;
		padding-left: 0;
		padding-right: 0;
	}
    #slide-4 img {
      width:100%;
    }


/* Slide 5 */
#slide-5 .bcg {background-image:url('../img/bcg_slide-5.jpg')}
/* ... */

